<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_0" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginView" customModule="SocialApp" customModuleProvider="target">
            <connections>
                <outlet property="buttonHideShowPassword" destination="9Cr-lm-T6G" id="EPn-GM-jww"/>
                <outlet property="textFieldEmail" destination="WS9-XG-Odj" id="OgW-zu-QHN"/>
                <outlet property="textFieldPassword" destination="kEO-kg-Vqr" id="3RM-ps-d6K"/>
                <outlet property="view" destination="uEt-Ne-Kpo" id="Fga-2G-vtP"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view opaque="NO" contentMode="scaleToFill" id="uEt-Ne-Kpo">
            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
            <subviews>
                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch" translatesAutoresizingMaskIntoConstraints="NO" id="Scc-dK-L9i">
                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                </imageView>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6fQ-da-GZs">
                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="displayP3"/>
                </view>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" translatesAutoresizingMaskIntoConstraints="NO" id="WS9-XG-Odj">
                    <rect key="frame" x="30" y="233.5" width="260" height="44"/>
                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <color key="tintColor" name="Theme"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="44" id="Pl3-GT-ruk"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                    <textInputTraits key="textInputTraits" textContentType="email"/>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                            <real key="value" value="8"/>
                        </userDefinedRuntimeAttribute>
                    </userDefinedRuntimeAttributes>
                </textField>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" translatesAutoresizingMaskIntoConstraints="NO" id="kEO-kg-Vqr">
                    <rect key="frame" x="30" y="287.5" width="260" height="40.5"/>
                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <color key="tintColor" name="Theme"/>
                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                            <real key="value" value="8"/>
                        </userDefinedRuntimeAttribute>
                    </userDefinedRuntimeAttributes>
                </textField>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bPQ-b5-OLK">
                    <rect key="frame" x="30" y="348" width="260" height="48"/>
                    <color key="backgroundColor" name="Navigation"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="48" id="RBQ-zF-oYt"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                    <state key="normal" title="Login">
                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </state>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                            <real key="value" value="8"/>
                        </userDefinedRuntimeAttribute>
                    </userDefinedRuntimeAttributes>
                    <connections>
                        <action selector="actionLogin:" destination="-1" eventType="touchUpInside" id="lNR-Mh-dSx"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="715-HL-vUa">
                    <rect key="frame" x="30" y="490" width="260" height="48"/>
                    <color key="backgroundColor" name="Theme"/>
                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                    <inset key="contentEdgeInsets" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                    <state key="normal" title="Sign Up">
                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </state>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                            <real key="value" value="8"/>
                        </userDefinedRuntimeAttribute>
                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                            <real key="value" value="0.5"/>
                        </userDefinedRuntimeAttribute>
                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                            <color key="value" name="Border"/>
                        </userDefinedRuntimeAttribute>
                    </userDefinedRuntimeAttributes>
                    <connections>
                        <action selector="actionSignUp:" destination="-1" eventType="touchUpInside" id="CsB-br-6tc"/>
                    </connections>
                </button>
                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="P3k-01-CVK">
                    <rect key="frame" x="262.5" y="506" width="12.5" height="16.5"/>
                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                </imageView>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Cr-lm-T6G">
                    <rect key="frame" x="248" y="287.5" width="27" height="40.5"/>
                    <color key="tintColor" systemColor="secondaryLabelColor"/>
                    <state key="normal" image="eye.fill" catalog="system"/>
                    <state key="selected" image="eye.slash.fill" catalog="system"/>
                    <connections>
                        <action selector="actionHideShowPassword:" destination="-1" eventType="touchUpInside" id="wMn-xP-5Eh"/>
                    </connections>
                </button>
            </subviews>
            <viewLayoutGuide key="safeArea" id="Bwk-xK-TgM"/>
            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
            <constraints>
                <constraint firstItem="bPQ-b5-OLK" firstAttribute="top" secondItem="kEO-kg-Vqr" secondAttribute="bottom" constant="20" id="1Su-Zu-0Fq"/>
                <constraint firstAttribute="leading" secondItem="Scc-dK-L9i" secondAttribute="leading" id="1bW-cu-hfu"/>
                <constraint firstItem="kEO-kg-Vqr" firstAttribute="leading" secondItem="WS9-XG-Odj" secondAttribute="leading" id="2EN-Yn-YM0"/>
                <constraint firstItem="6fQ-da-GZs" firstAttribute="trailing" secondItem="Scc-dK-L9i" secondAttribute="trailing" id="61S-bb-ahY"/>
                <constraint firstItem="6fQ-da-GZs" firstAttribute="bottom" secondItem="Scc-dK-L9i" secondAttribute="bottom" id="CiR-M5-dY7"/>
                <constraint firstItem="6fQ-da-GZs" firstAttribute="top" secondItem="Scc-dK-L9i" secondAttribute="top" id="EVo-LI-o8i"/>
                <constraint firstItem="Bwk-xK-TgM" firstAttribute="bottom" secondItem="715-HL-vUa" secondAttribute="bottom" constant="30" id="EVq-0S-gfR"/>
                <constraint firstItem="9Cr-lm-T6G" firstAttribute="centerY" secondItem="kEO-kg-Vqr" secondAttribute="centerY" id="FOs-nL-LyS"/>
                <constraint firstItem="715-HL-vUa" firstAttribute="centerX" secondItem="uEt-Ne-Kpo" secondAttribute="centerX" id="KXv-oz-jvV"/>
                <constraint firstItem="9Cr-lm-T6G" firstAttribute="top" secondItem="kEO-kg-Vqr" secondAttribute="top" id="Kfd-Kr-s9o"/>
                <constraint firstItem="715-HL-vUa" firstAttribute="leading" secondItem="bPQ-b5-OLK" secondAttribute="leading" id="NTq-4W-adz"/>
                <constraint firstItem="bPQ-b5-OLK" firstAttribute="leading" secondItem="kEO-kg-Vqr" secondAttribute="leading" id="OoD-rR-ysn"/>
                <constraint firstItem="kEO-kg-Vqr" firstAttribute="height" secondItem="WS9-XG-Odj" secondAttribute="height" multiplier="0.916667" id="Wbt-Wj-bEo"/>
                <constraint firstItem="9Cr-lm-T6G" firstAttribute="trailing" secondItem="kEO-kg-Vqr" secondAttribute="trailing" constant="-15" id="XVo-Tz-pj4"/>
                <constraint firstItem="715-HL-vUa" firstAttribute="height" secondItem="bPQ-b5-OLK" secondAttribute="height" id="Yud-17-L3y"/>
                <constraint firstItem="6fQ-da-GZs" firstAttribute="leading" secondItem="Scc-dK-L9i" secondAttribute="leading" id="aZH-Wk-Dvm"/>
                <constraint firstItem="WS9-XG-Odj" firstAttribute="leading" secondItem="Bwk-xK-TgM" secondAttribute="leading" constant="30" id="cT8-IO-pJd"/>
                <constraint firstItem="P3k-01-CVK" firstAttribute="centerY" secondItem="715-HL-vUa" secondAttribute="centerY" id="cl5-Zu-Pua"/>
                <constraint firstItem="Scc-dK-L9i" firstAttribute="top" secondItem="uEt-Ne-Kpo" secondAttribute="top" id="cxc-o1-MGq"/>
                <constraint firstItem="715-HL-vUa" firstAttribute="trailing" secondItem="bPQ-b5-OLK" secondAttribute="trailing" id="d4F-Gz-rYG"/>
                <constraint firstItem="WS9-XG-Odj" firstAttribute="centerY" secondItem="uEt-Ne-Kpo" secondAttribute="centerY" multiplier="0.9" id="eAq-6O-ln9"/>
                <constraint firstItem="9Cr-lm-T6G" firstAttribute="bottom" secondItem="kEO-kg-Vqr" secondAttribute="bottom" id="gS6-oN-2rz"/>
                <constraint firstItem="P3k-01-CVK" firstAttribute="trailing" secondItem="715-HL-vUa" secondAttribute="trailing" constant="-15" id="jFm-eZ-apb"/>
                <constraint firstAttribute="bottom" secondItem="Scc-dK-L9i" secondAttribute="bottom" id="oCf-XQ-Imm"/>
                <constraint firstItem="Bwk-xK-TgM" firstAttribute="trailing" secondItem="WS9-XG-Odj" secondAttribute="trailing" constant="30" id="uF7-zz-j6s"/>
                <constraint firstItem="kEO-kg-Vqr" firstAttribute="trailing" secondItem="WS9-XG-Odj" secondAttribute="trailing" id="vbb-6o-LdR"/>
                <constraint firstItem="Scc-dK-L9i" firstAttribute="trailing" secondItem="uEt-Ne-Kpo" secondAttribute="trailing" id="wEY-MT-Izt"/>
                <constraint firstItem="kEO-kg-Vqr" firstAttribute="top" secondItem="WS9-XG-Odj" secondAttribute="bottom" constant="10" id="wp9-B1-OD9"/>
                <constraint firstItem="bPQ-b5-OLK" firstAttribute="trailing" secondItem="kEO-kg-Vqr" secondAttribute="trailing" id="zfK-WE-rT1"/>
            </constraints>
            <point key="canvasLocation" x="140" y="153"/>
        </view>
    </objects>
    <resources>
        <image name="chevron.right" catalog="system" width="97" height="128"/>
        <image name="eye.fill" catalog="system" width="128" height="80"/>
        <image name="eye.slash.fill" catalog="system" width="128" height="85"/>
        <image name="launch" width="1748" height="922"/>
        <namedColor name="Border">
            <color red="0.22745099660000001" green="0.34509804840000002" blue="0.90196073060000004" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
        </namedColor>
        <namedColor name="Navigation">
            <color red="0.6549019814" green="0.31764706970000001" blue="0.80392158030000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
        </namedColor>
        <namedColor name="Theme">
            <color red="0.22745099660000001" green="0.34901961679999999" blue="0.90196073060000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
        </namedColor>
        <systemColor name="secondaryLabelColor">
            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
