...

    override func viewWillDisappear(_ animated: Bool) {
        presentingViewController?.viewWillAppear(animated)
    }
    
    func initUI() {
        title = "Create Post"
        navigationController?.navigationBar.prefersLargeTitles = false
        navigationItem.largeTitleDisplayMode = .never
        navigationItem.leftBarButtonItem = UIBarButtonItem(title: "Cancel", style: .plain, target: self, action: #selector(actionCancel(_:)))
        navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Publish", style: .done, target: self, action: #selector(actionPublish(_:)))
        
        placeholderLabel.font = textViewPost.font
        placeholderLabel.frame.origin = CGPoint(x: 5, y: textViewPost.font!.pointSize / 2)
        placeholderLabel.textColor = UIColor.quaternaryLabel
        placeholderLabel.isHidden = !textViewPost.text.isEmpty
        textViewPost.addSubview(placeholderLabel)
...
